fix: repair alignment error in media.html and improve design continuity by housing iframe in news item wrapper

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,13 @@ button {
     background-color: #e55e1d;
 }
 
+/* ***** VIDEO **** */
+
+.video-box {
+    width: 100%;
+    text-align: center;
+}
+
 /* ***** FIRE IMAGE **** */
 
 .fire-box {
